# VoxelEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Common/: Config.hpp
Engine/: CMakeLists.txt
Engine/DataStructures/: BrickMap.cpp  BrickMap.hpp  Octree.hpp  VoxelGrid.cpp  VoxelGrid.hpp
Engine/Display/: Window.cpp
Engine/EntityComponent/: Component.cpp  System.cpp
Engine/Input/: InputManager.cpp  Keyboard.cpp
Engine/Math/: BoundingBox.cpp  BoundingBox.hpp  Color.cpp  Color.hpp  Random.cpp  Ray.cpp  Ray.hpp
Engine/Render/: Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  GraphicsNode.cpp  GraphicsNode.hpp  Renderer.cpp  Renderer.hpp
Engine/Render/Model/: Material.hpp  Model.hpp  ObjLoader.cpp  Voxelizer.cpp  Voxelizer.hpp
Engine/Render/Shader/: Shader.cpp  Shader.hpp  StorageBuffer.cpp  StorageBuffer.hpp
Engine/Render/Texture/: Image.cpp  Image.hpp  Texture.cpp  Texture.hpp
Engine/Render/Vertex/: IndexBuffer.cpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBufferLayout.hpp
Engine/Utility/: Transform.hpp
Libs/: CMakeLists.txt
Projects/: main.cpp
Projects/App/: App.cpp  App.hpp  FirstPersonCamera.hpp  Movement.cpp  Movement.hpp  Terrain.cpp  Terrain.hpp
Projects/App/UserInterface/: Inspector.cpp  Inspector.hpp
Shaders/: BasicShader.vs  BlinnPhong.fs  BlinnPhongNormal.fs  GBuffer.fs  GBuffer.vs  LineDraw.fs  LineDraw.vs  ScreenQuad.fs  ScreenQuad.vs  ScreenQuadComp.fs  SkyBox.fs  SkyBox.vs  VoxelTraverse.comp  unlit.fs  unlit.vs
common/: pch.hpp
engine/: CMakeLists.txt  config.h
engine/core/: CMakeLists.txt  gltf.h
engine/input/: CMakeLists.txt  Input.h  Keyboard.cc  Keyboard.h
engine/physics/: CMakeLists.txt  Collider.cc  Collider.h  Physics.cc  Physics.h  Rigidbody.cc  Rigidbody.h  epa.cc  epa.h  gjk.cc  gjk.h
engine/render/: CMakeLists.txt  Debug.cc  Debug.h  window.cc  window.h
engine/render/graphics/: Camera.cc  Camera.h  FrameBuffer.cc  FrameBuffer.h  GLTFinfo.cc  GLTFinfo.h  GraphicsNode.cc  GraphicsNode.h  Material.cc  Material.h  MeshResource.cc  MeshResource.h  Model.cc  Model.h  PointLight.cc  PointLight.h  ShaderResource.cc  ShaderResource.h  SkyBox.cc  SkyBox.h  Sun.cc  Sun.h  TextureResource.cc  TextureResource.h
engine/world/: CMakeLists.txt  inspector.cc  inspector.h  object.cc  object.h  world.cc  world.h
exts/: CMakeLists.txt
exts/glfw/: CMakeLists.txt
exts/imgui/examples/directx10_example/: directx10_example.vcxproj
exts/imgui/examples/directx11_example/: directx11_example.vcxproj
exts/imgui/examples/directx9_example/: directx9_example.vcxproj
exts/imgui/examples/opengl2_example/: opengl2_example.vcxproj
exts/imgui/examples/opengl3_example/: opengl3_example.vcxproj
libs/: CMakeLists.txt
projects/UnconstrainedDynamics/: CMakeLists.txt
projects/UnconstrainedDynamics/code/: exampleapp.cc  exampleapp.h  main.cc
projects/Voxel/: CMakeLists.txt
projects/Voxel/code/: VoxelOctree.h  exampleapp.cc  exampleapp.h  main.cc  random.h  voxel.cc  voxel.h
src/: main.cpp
src/App/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Movement.cpp  Terrain.hpp
src/DataStructures/: BrickMap.cpp  BrickMap.hpp  Octree.cpp  VoxelGrid.cpp
src/Display/: Window.cpp  Window.hpp
src/EntityComponent/: Component.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  System.hpp
src/Input/: InputManager.hpp  Keyboard.hpp
src/Math/: BoundingBox.hpp  Easing.hpp  Random.hpp
src/Render/: GraphicsNode.cpp  GraphicsNode.hpp  Renderer.cpp  Renderer.hpp
src/Render/Model/: Model.hpp  ObjLoader.hpp  Voxelizer.hpp
src/Render/Shader/: Shader.cpp  Shader.hpp  StorageBuffer.cpp  StorageBuffer.hpp
src/Render/Texture/: Image.cpp  Texture.cpp  Texture.hpp
src/Render/Vertex/: IndexBuffer.hpp  VertexBuffer.hpp  VertexBufferLayout.cpp
src/Utility/: Transform.hpp
